syntax = "proto3";

package points;
option go_package = ".";

message PointsRecord {
  string article_id = 1;
  int64 points_count = 2;
  string date = 3;
}

message SignInReq {
  int64 user_id = 1;
  int64 user_points = 2;
  int64 request_id = 3;
}

message SignInResp {
  bool success = 1;
  string message = 2;
}

message AddArticlePointReq {
  int64 user_id = 1;
  int64 article_id = 2;
  int64 points_count = 3;
  int64 user_points = 4;
  int64 request_id = 5;
}

message AddArticlePointResp {
  bool success = 1;
  string message = 2;
}

message GetUserAddPointHistoryReq {
  int64 user_id = 1;
}

message GetUserAddPointHistoryResp {
  repeated PointsRecord points_record = 1;
}

service PointsService {

  rpc SignIn(SignInReq) returns (SignInResp); //签到
  rpc AddArticlePoint(AddArticlePointReq) returns (AddArticlePointResp); //对某个文章进行投币
  rpc GetUserAddPointHistory(GetUserAddPointHistoryReq) returns (GetUserAddPointHistoryResp); //获取用户的投币记录

}
